dropshot/tests/fail/bad_trait_only6.stderr
error: context type `Context` must not have generics
 --> tests/fail/bad_trait_only6.rs:9:17
  |
9 |     type Context<T>;
  |                 ^^^

error[E0425]: cannot find function `api_description` in module `my_api`
  --> tests/fail/bad_trait_only6.rs:23:13
   |
23 |     my_api::api_description::<MyImpl>();
   |             ^^^^^^^^^^^^^^^ not found in `my_api`

error[E0425]: cannot find function `stub_api_description` in module `my_api`
  --> tests/fail/bad_trait_only6.rs:24:13
   |
24 |     my_api::stub_api_description();
   |             ^^^^^^^^^^^^^^^^^^^^ not found in `my_api`
